# mxmap-at

./: CLAUDE.md  CNAME  README.md  datenschutz.html  impressum.html  index.html  pyproject.toml
data/: data.json  data.min.json  match_missing.py  matched_missing.json  municipalities_gv_at.csv  municipality_domains.json  overrides.json
js/: map-shared.js
src/mail_sovereignty/: analyze.py  classifier.py  cli.py  constants.py  extract_austria_municipalities.py  log.py  models.py  pipeline.py  probes.py  resolve.py  resolve_domains.py  run_resolve.py  signatures.py
tests/: test_analyze.py  test_classifier.py  test_cli.py  test_data_validation.py  test_models.py  test_pipeline.py  test_probes.py  test_resolve.py  test_signatures.py
