[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxmap"
version = "0.1.0"
description = "Interactive map showing where Austrian municipalities host their email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.0",
    "stamina>=25.2.0",
]

[project.scripts]
extract-austria-municipalities = "mail_sovereignty.cli:extract_austria_municipalities"
resolve-domains = "mail_sovereignty.cli:resolve_domains"
classify-providers = "mail_sovereignty.cli:classify_providers"
analyze = "mail_sovereignty.cli:analyze"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_sovereignty"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["mail_sovereignty"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
]
